# ansible-role-ubuntu-installer

./: .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .talismanrc  .travis.yml  .yamllint  Makefile  README.md  devbox.json  justfile  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/: cache.yml  cleanup.yml  converge.yml  create.yml  destroy.yml  inventory.yml  prepare.yml  vars.yml  verify.yml
molecule/default/: Dockerfile.j2  cleanup.yml  converge.yml  create.yml  destroy.yml  molecule.yml  playbook.yml  prepare.yml  requirements.yml  vars.yml  verify.yml
molecule/default/templates/: network.j2.xml  pool.j2.xml  user-data.yml.j2  vm.xml.j2
molecule/default/tests/: test_default.py
molecule/iso/: molecule.yml
molecule/kvm/: create.yml  destroy.yml  molecule.yml  requirements.yml
molecule/netinstall/: molecule.yml  playbook.yml
molecule/templates/: vm.xml.j2
roles/: .gitignore
tasks/: debian.yml  live.yml  main.yml
templates/: isolinux.debian.j2  isolinux.debian.txt.j2  isolinux.live.txt.j2  isolinux.txt.j2  ubuntu.seed.j2  user-data.j2
vars/: Archlinux.yml  Debian.yml  Ubuntu.yml
