[tool.poetry]
name = "nephelaiio-ubuntu-installer"
version = "6.2.5"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.3", markers = "platform_system != 'Windows'" }
ansible = "^9.5.1"
molecule = "^24.2.1"
netaddr = "^1.2.1"
libvirt-python = "^10.2.0"
lxml = "^5.2.1"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
