[tool.poetry]
name = "nephelaiio-ubuntu-installer"
version = "6.2.5"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }
ansible = "^10.0.1"
molecule = "^24.6.0"
molecule-plugins = "^23.5.3"
yamllint = "^1.35.1"
netaddr = "^1.3.0"
libvirt-python = "^10.5.0"
lxml = "^5.2.2"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
