[project]
name = "nephelaiio-ubuntu-installer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "ansible>=11.5.0",
  "ansible-lint>=25.4.0",
  "lxml>=5.4.0",
  "molecule>=25.4.0",
  "molecule-plugins>=23.7.0",
  "netaddr>=1.3.0",
  "passlib>=1.7.4",
  "urllib3>=2.4.0",
  "xmltodict>=0.14.2",
  "yamllint>=1.37.1",
]
